--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
+crispy-bootstrap4==2022.1
 Django==3.2.20
 django-allauth==0.41.0
+django-crispy-forms==2.0
 gunicorn==21.2.0
 oauthlib==3.2.2
 python3-openid==3.2.0
