--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.7.2
 crispy-bootstrap4==2022.1
 Django==3.2.20
 django-allauth==0.41.0
-django-countries==7.5.1
+django-countries==7.2.1
 django-crispy-forms==2.0
 gunicorn==21.2.0
 oauthlib==3.2.2
@@ -11,4 +11,5 @@ python3-openid==3.2.0
 pytz==2023.3
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
+stripe==6.5.0
 whitenoise==6.5.0
