--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 asgiref==3.7.2
+boto3==1.28.53
+botocore==1.31.53
 crispy-bootstrap4==2022.1
 Django==3.2.20
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==2.0
+django-ses==3.5.0
 gunicorn==21.2.0
+jmespath==1.0.1
 oauthlib==3.2.2
 Pillow==10.0.0
 python3-openid==3.2.0
 pytz==2023.3
 requests-oauthlib==1.3.1
+s3transfer==0.6.2
 sqlparse==0.4.4
 stripe==6.5.0
+urllib3==1.26.16
 whitenoise==6.5.0
