--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==2.0
 django-ses==3.5.0
+django-storages==1.14.1
 gunicorn==21.2.0
 jmespath==1.0.1
 oauthlib==3.2.2
